<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="7dp"
        android:background="#0E0E0E"
        app:cardBackgroundColor="#2196F3"

        app:cardCornerRadius="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#2196F3">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="559dp"
                android:layout_marginBottom="88dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Heading"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"

                    android:layout_marginRight="5dp"

                    android:background="#DF2222"
                    android:padding="20dp"
                    android:text="@string/Bmi"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/txtMsg"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:background="#DF2222"
                    android:text="@string/Result"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txtResult"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="15dp"
                    android:background="#DF2222"
                    android:padding="10dp"
                    android:text="@string/bmi_result"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="italic" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/edtWeight"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"

                        android:layout_margin="4dp"

                        android:autofillHints=""
                        android:background="@drawable/bg_box"
                        android:hint="@string/weightInKg"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="#283593"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp">

                        <EditText
                            android:id="@+id/edtHeightFt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:background="@drawable/bg_box"
                            android:hint="@string/heightInFt"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textColorHint="#283593"
                            android:textSize="20sp"
                            tools:ignore="TouchTargetSizeCheck" />

                        <EditText
                            android:id="@+id/edtHeightIn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_marginEnd="11dp"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:background="@drawable/bg_box"
                            android:hint="@string/heightInInches"
                            android:inputType="number"
                            android:minHeight="48dp"
                            android:padding="10dp"
                            android:textColorHint="#283593"
                            android:textSize="20sp" />


                    </LinearLayout>
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCalculate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="10dp"


                    android:background="@drawable/bg_button"
                    android:backgroundTint="#F4F0F0"
                    android:paddingEnd="10dp"
                    android:text="@string/calculate"
                    android:textAlignment="center"
                    android:textColor="#131212"
                    android:textColorHighlight="#F4EEEE"
                    android:textColorHint="#F4F0F0"
                    android:textColorLink="#EFEBEB"
                    android:textSize="24sp" />
            </LinearLayout>

    </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>